--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -219,6 +219,8 @@ a[href|="/doodoodooderp"]{
     background-position: -129px -0px;
     background-image: url(%%doodoodoo-daring-derp%%)
     }
+
+a[href|="/daringdoodoodoo"],
 a[href|="/doodoodoodaring"]{
     display: block;
     clear: none;
@@ -243,6 +245,59 @@ a[href|="/doodoodooscootaloo"]{
     height: 140px;
     background-position: -121px -0px;
     background-image: url(%%doodoodoo-luna-scootaloo%%)
+    }
+
+a[href|="/trixiechaos"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 193px;
+    height: 140px;
+    background-image: url(%%trixiechaos%%)
+    }
+a[href|="/octyawn"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 108px;
+    height: 140px;
+    background-image: url(%%octyawn%%)
+    }
+a[href|="/justthetips"],
+a[href|="/backandforthforever"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 175px;
+    height: 140px;
+    background-image: url(%%backandforthforever%%)
+    }
+a[href|="/twentyfive"]
+{
+    display: block;
+    clear: none;
+    float: left;
+    width: 124px;
+    height: 200px;
+    background-image: url(%%twentyfiveminutesofthis%%)
+    }
+a[href|="/congratulationsyouraccountisnowenabledforuploadslongerthanfifteenminutes"],
+a[href|="/minutesofthis"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 81px;
+    height: 200px;
+    background-position: -139px -0px;
+    background-image: url(%%twentyfiveminutesofthis%%)
+    }
+a[href|="/mmmbananas"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 224px;
+    height: 140px;
+    background-image: url(%%mmmbananas%%)
     }
 /*end animotes*/
 
@@ -904,6 +959,9 @@ a[href|="/dramaaa"],
 a[href|="/maredoboozicorn"], 
 a[href|="/canninow"], 
 a[href|="/racist"],
+a[href|="/fools"],
+a[href|="/excalibur"],
+a[href|="/foals"],
 a[href|="/mwno"]
 {
     display: block;
@@ -962,6 +1020,15 @@ a[href|="/racist"]
     width: 197px;
     background-position: -0px -560px;
 }
+
+a[href|="/fools"],
+a[href|="/excalibur"],
+a[href|="/foals"]
+{
+    width: 134px;
+    background-position: -197px -560px;
+}
+
 a[href|="/mwno"]
 {
     width: 110px;
@@ -969,3 +1036,30 @@ a[href|="/mwno"]
     background-position: -0px -1400px;
 }
 /* end sheet 7 */
+
+/* sheet 8 */
+a[href|="/rapingtime"],
+a[href|="/awkwardhug"]
+{
+    display: block;
+    clear: none;
+    float: left;
+    height: 140px;
+    background-image: url(%%sheet8%%)
+}
+a[href|="/rapingtime"]
+{
+	width: 112px;
+	background-position: -0px -0px;
+}
+a[href|="/rapingtime"]:hover
+{
+	width: 112px;
+	background-position: -112px -0px;
+}
+a[href|="/awkwardhug"]
+{
+	width: 150px;
+	background-position: -224px -0px;
+}
+/* end sheet 8 */
