--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -1296,6 +1296,7 @@ a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
 .tagline a.author[href$="/Indubitableness"]:before,
 .tagline a.author[href$="/EvanMacIan"]:before,
 .tagline a.author[href$="/RainbowCrash"]:before,
+.tagline a.author[href$="/Latiel"]:before,
 .tagline a.author[href$="/245001"]:before
 {
     background-position: 0px -540px;
