--- a/source-css/mylittlesupportgroup.css
+++ b/source-css/mylittlesupportgroup.css
@@ -1,3 +1,7 @@
+#form-t3_1asfoasxt {
+	display:none!important
+}
+
 /*====================
 Last edit by: Phei
 Please don't meddle with the CSS.
@@ -301,6 +305,8 @@ Link flair
     max-width:800px;
   }  
     
+
+
 .res-nightmode .linkflair p.title .linkflairlabel {
          background:transparent;
          color:silver;
