--- a/source-css/speedingturtle.css
+++ b/source-css/speedingturtle.css
@@ -75,13 +75,15 @@ background-position: -289px -141px
  *
  */
 
-a[href|='/turnope'], a[href|='/spitderp'], a[href|='/hound'], a[href|='/deslo'], a[href|='/flirtypie'], a[href|='/spitbunny'], a[href|='/deslosex'], a[href|='/orange'], a[href|='/fitfiddle'], a[href|='/sexychiv'], a[href|='/ndisaproval'], a[href|='/ndisaprooval'], a[href|='/kontan'], a[href|='/reggie'], a[href|='/idontgiveashit'], a[href|='/flysymphony'], a[href|='/fly'], a[href|='/rapebus'], a[href|='/excitedpie'], a[href|='/sleepyluna'], a[href|='/badatsleeping'], a[href|='/sirachisicle'], a[href|='/rdj'], a[href|='/rarityass']
+a[href|='/turnope'], a[href|='/spitderp'], a[href|='/hound'], a[href|='/deslo'], a[href|='/flirtypie'], a[href|='/spitbunny'], a[href|='/deslosex'], a[href|='/orange'], a[href|='/fitfiddle'], a[href|='/sexychiv'], a[href|='/ndisaproval'], a[href|='/ndisaprooval'], a[href|='/kontan'], a[href|='/reggie'], a[href|='/idontgiveashit'], a[href|='/flysymphony'], a[href|='/fly'], a[href|='/rapebus'], a[href|='/excitedpie'], a[href|='/sleepyluna'], a[href|='/badatsleeping'], a[href|='/sirachisicle'], a[href|='/rdj'], a[href|='/rarityass'], a[href|='/twipaper']
  {
     display: block;
     clear: none;
     float: left;
     background-image: url(%%table1%%)
 }
+
+a[href|='/twipaper'] {height:136px;width:140px;background-position:-258px -524px;}
 a[href|='/deslo'] {height:111px;width:100px;background-position:0 0;}
 a[href|='/deslosex'] {height:247px;width:256px;background-position:0 -524px;}
 a[href|='/excitedpie'] {height:125px;width:122px;background-position:-100px 0;}
