--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -46,7 +46,7 @@ div.titlebox span.number:after {
 /* Header */
 #header {
     background-color: #ade0b9;
-    background-image: url(%%newerBG%%);
+    background-image: url(%%frostbitebg%%);
     background-repeat:repeat-x;
     border-bottom: 1px solid #000;
     height: 147px;
