--- a/source-css/mylittlemango.css
+++ b/source-css/mylittlemango.css
@@ -7,14 +7,41 @@ Added emotes (1/15/13)
 
 */
 
-/* Banner */
+/* Header */
 
 #header-bottom-left:nth-of-type(n) {
-   background: url(%%banner1%%);
+   background: url(%%mylittlemangoheader%%);
    background-repeat: no-repeat;
    background-position: 50% 100%;
    height: 200px; 
 }
+
+span.redditname
+{
+	display:block;
+	margin:0 auto;
+	position:relative;
+	top:-160px;
+	width:1050px;
+	z-index:3;
+}
+
+#header .tabmenu
+{
+	bottom:1px;
+	left:20px;
+	position:absolute;
+	z-index:4;
+}
+
+.tabmenu {
+	list-style-type:none;
+	white-space:nowrap;
+	display:inline-block;
+	margin-top:5px;
+	vertical-align:bottom;
+}
+
 
 /* Background*/
 
